# blockchain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  demo.cpp
include/: general.hpp
include/binary_data_converter/: binary_data_converter_default.hpp  binary_data_converter_interface.hpp
include/block/: block.hpp
include/blockchain/: block_chain.hpp  blockchain.hpp
include/hash_calculator/: hash_calculator.hpp  hash_calculator_interface.hpp  hash_calculator_sha256.hpp
include/miner/: block_miner.hpp  block_miner_cpu_brute_force.hpp
include/ssybc/: ssybc.hpp
include/ssybc/binary_content_data/: binary_content_data.hpp
include/ssybc/binary_data_converter/: binary_data_converter_default.hpp  binary_data_converter_interface.hpp
include/ssybc/block/: block.hpp
include/ssybc/block/block_content/: block_content.hpp
include/ssybc/block/block_header/: block_header.hpp
include/ssybc/blockchain/: blockchain.hpp
include/ssybc/blockchain/blockchain_iterator/: blockchain_iterator.hpp
include/ssybc/config/: ssybc_config.hpp  ssybc_config.hpp.in
include/ssybc/general/: general.hpp
include/ssybc/hash_calculator/: hash_calculator_double_sha256.hpp  hash_calculator_interface.hpp  hash_calculator_sha256.hpp
include/ssybc/logging/: logging.hpp
include/ssybc/miner/: block_miner.hpp  block_miner_cpu_brute_force.hpp
include/ssybc/utility/: operator.hpp  utility.hpp
include/ssybc/validator/: block_validator.hpp  block_validator_less_hash.hpp
include/utility/: operator.hpp  utility.hpp
include/validator/: block_validator.hpp  block_validator_interface.hpp  block_validator_less_hash.hpp
samples/sample01_cpu_str/: cpu_str.cpp
samples/sample02_cpu_str_hard/: cpu_str_hard.cpp
samples/sample03_cpu_binary_easy/: cpu_binary_easy.cpp
samples/sample04_cpu_crypto_puppy/: CMakeLists.txt  cpu_crypto_puppy.cpp  puppy.hpp  puppy_impl.cpp  puppy_impl.hpp
samples/sample04_cpu_crypto_puppy/puppy/: puppy.hpp  puppy_impl.hpp
samples/sample_01_cpu_string/: CMakeLists.txt  sample_01_cpu_string.cpp
src/binary_content_data/: binary_content_data.cpp  binary_content_data_impl.hpp
src/binary_data_converter/: binary_data_converter_default_impl.hpp
src/block/: block.cpp  block_impl.hpp
src/block/block_content/: block_content_impl.hpp
src/block/block_header/: block_header_impl.hpp
src/blockchain/: blockchain_impl.hpp
src/blockchain/blockchain_iterator/: blockchain_iterator_impl.hpp
src/hash_calculator/: hash_calculator_double_sha256.cpp  hash_calculator_double_sha256_impl.hpp  hash_calculator_sha256.cpp  hash_calculator_sha256_impl.hpp
src/logging/: logging_impl.hpp
src/miner/: block_miner_cpu_brute_force_impl.hpp  block_miner_impl.hpp
src/utility/: operator.cpp  operator_impl.hpp  utility.cpp  utility_impl.hpp
src/validator/: block_validator_impl.hpp  block_validator_less_hash_impl.hpp
